--- a/pages/objetivos.html
+++ b/pages/objetivos.html
@@ -16,7 +16,7 @@
         <p>Programa de doação de alimentos</p>
     </header>
     <nav>
-        <a href="#" id="primeiro">Entidades</a>
+        <a href="#" >Entidades</a>
         <a href="#">Cadastro</a>
         <a href="#">Objetivos</a>
     </nav>
