--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <p>Programa de doação de alimentos</p>
     </header>
     <nav>
-        <a href="pages/objetivos.html" >Entidades</a>
+        <a href="#" >Entidades</a>
         <a href="#">Cadastro</a>
         <a href="objetivos.html">Objetivos</a>
     </nav>
